{
  "version": 4,
  "terraform_version": "1.1.1",
  "serial": 111,
  "lineage": "71916f82-537e-1279-8c0e-c17d257b6ce7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd0cdd4bc0c73fce",
            "domain": "vpc",
            "id": "eipalloc-0dd0cdd4bc0c73fce",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-214-37-117.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.214.37.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nureip"
            },
            "tags_all": {
              "Name": "nureip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:764101603994:internet-gateway/igw-0879e5d6d017ac1a3",
            "id": "igw-0879e5d6d017ac1a3",
            "owner_id": "764101603994",
            "tags": {
              "Name": "nurigw"
            },
            "tags_all": {
              "Name": "nurigw"
            },
            "vpc_id": "vpc-0c8b1f3afa8648804"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd0cdd4bc0c73fce",
            "connectivity_type": "public",
            "id": "nat-0f7c191a2181baa25",
            "network_interface_id": "eni-0cbe67e2cc194cd80",
            "private_ip": "10.0.1.188",
            "public_ip": "52.214.37.117",
            "subnet_id": "subnet-016c2f9af8d29d637",
            "tags": {
              "Name": "nurnatgw"
            },
            "tags_all": {
              "Name": "nurnatgw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nurroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:764101603994:route-table/rtb-0d94a3200d1fc5fd5",
            "id": "rtb-0d94a3200d1fc5fd5",
            "owner_id": "764101603994",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0879e5d6d017ac1a3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nurroutetable"
            },
            "tags_all": {
              "Name": "nurroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8b1f3afa8648804"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nurrouteprivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:764101603994:route-table/rtb-07226d17f732c393c",
            "id": "rtb-07226d17f732c393c",
            "owner_id": "764101603994",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f7c191a2181baa25",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nurroutetableprivate"
            },
            "tags_all": {
              "Name": "nurroutetableprivate"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8b1f3afa8648804"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055f892a64200b01a",
            "route_table_id": "rtb-07226d17f732c393c",
            "subnet_id": "subnet-0e2c826345ae66c01"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.nurrouteprivate",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb3503a865051955",
            "route_table_id": "rtb-07226d17f732c393c",
            "subnet_id": "subnet-01268158fe69ea874"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.nurrouteprivate",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b414bf1bce9a336",
            "route_table_id": "rtb-07226d17f732c393c",
            "subnet_id": "subnet-0ec96f47e8c1c1874"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.nurrouteprivate",
            "aws_subnet.private3",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0921e7052caf4ee",
            "route_table_id": "rtb-0d94a3200d1fc5fd5",
            "subnet_id": "subnet-016c2f9af8d29d637"
          },
          "dependencies": [
            "aws_route_table.nurroute",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb7cf485e1c085e3",
            "route_table_id": "rtb-0d94a3200d1fc5fd5",
            "subnet_id": "subnet-0879936a5db503523"
          },
          "dependencies": [
            "aws_route_table.nurroute",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00330673b5c5d8078",
            "route_table_id": "rtb-0d94a3200d1fc5fd5",
            "subnet_id": "subnet-002a261453b5f6a3c"
          },
          "dependencies": [
            "aws_route_table.nurroute",
            "aws_subnet.public3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:764101603994:subnet/subnet-0e2c826345ae66c01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2c826345ae66c01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764101603994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nurprivate"
            },
            "tags_all": {
              "Name": "nurprivate"
            },
            "vpc_id": "vpc-0c8b1f3afa8648804"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:764101603994:subnet/subnet-01268158fe69ea874",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01268158fe69ea874",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764101603994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nurprivate"
            },
            "tags_all": {
              "Name": "nurprivate"
            },
            "vpc_id": "vpc-0c8b1f3afa8648804"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:764101603994:subnet/subnet-0ec96f47e8c1c1874",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec96f47e8c1c1874",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764101603994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nurprivate"
            },
            "tags_all": {
              "Name": "nurprivate"
            },
            "vpc_id": "vpc-0c8b1f3afa8648804"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:764101603994:subnet/subnet-016c2f9af8d29d637",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016c2f9af8d29d637",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "764101603994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nurpublic"
            },
            "tags_all": {
              "Name": "nurpublic"
            },
            "vpc_id": "vpc-0c8b1f3afa8648804"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:764101603994:subnet/subnet-0879936a5db503523",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0879936a5db503523",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "764101603994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nurpublic"
            },
            "tags_all": {
              "Name": "nurpublic"
            },
            "vpc_id": "vpc-0c8b1f3afa8648804"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:764101603994:subnet/subnet-002a261453b5f6a3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002a261453b5f6a3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "764101603994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nurpublic"
            },
            "tags_all": {
              "Name": "nurpublic"
            },
            "vpc_id": "vpc-0c8b1f3afa8648804"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:764101603994:vpc/vpc-0c8b1f3afa8648804",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06810d2c5941c33fc",
            "default_route_table_id": "rtb-032eb3672e1a7f808",
            "default_security_group_id": "sg-0cdb8a43e7b8d785f",
            "dhcp_options_id": "dopt-00370ba325b7bae03",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c8b1f3afa8648804",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032eb3672e1a7f808",
            "owner_id": "764101603994",
            "tags": {
              "Name": "nurgazy-vpc",
              "Team": "dev"
            },
            "tags_all": {
              "Name": "nurgazy-vpc",
              "Team": "dev"
            }
          }
        }
      ]
    }
  ]
}